--- a/src/App.scss
+++ b/src/App.scss
@@ -138,7 +138,7 @@ body {
   background-image: url("./assets/images/Background.jpg");
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: top center;
+  background-position: bottom center;
   width: 100vw;
   height: 100vh;
 }
